--- a/resources/js/lang/nb.json
+++ b/resources/js/lang/nb.json
@@ -41,6 +41,12 @@
     "auction_number": "Auksjonsnummer",
     "starting_price": "Utropspris",
     "mybid": "Mitt bud",
+    "new": "ny",
+    "DAY":"DAG",
+    "MINUTES":"MINUTTER",
+    "currentbid": "Nåværende bud",
+    "time_left": "TID IGJEN",
+    "auction_id": "Auksjons-ID",
     "bid_increase": "Minste budøkning",
     "bidding": "BUDHISTORIKK",
     "ends_in": "Avsluttes om",
@@ -62,6 +68,52 @@
     "Indicates bidder": "Indikerer budleder",
     "Brand": "Merke",
     "indicates the use of auto bidding": "indikerer bruk av autobud",
-    "txt_information": "Auksjon fra iAuto AS er avsluttet. Vi takker for budene - alle får svar på budene som er lagt inn via e-post.    Neste auksjon er planlagt og e-post med informasjon blir sendt når bilene er klare."
-  }
+    "txt_information": "Auksjon fra iAuto AS er avsluttet. Vi takker for budene - alle får svar på budene som er lagt inn via e-post.    Neste auksjon er planlagt og e-post med informasjon blir sendt når bilene er klare.",
+    "Monday": "Mandag",
+    "Friday": "Fredag",
+    "Saturday": "Lørdag",
+    "Sunday": "Søndag",
+    "Closed": "Closed",
+    "txt_footer":"Varemerker og varemerker tilhører deres respektive eiere.",
+    "Enter your first name": "Angi fornavn",
+    "Enter your last name": "Angi etternavn",
+    "Phone Number" : "Telefonnummer",
+    "Subscribe and Get latest updates and offers by Email":"Abonner og få siste oppdateringer og tilbud via e-post",
+    "txt_1":"Før vi går foran oss, ønsker vi deg velkommen til Loeber Motors. Selv om ingenting kan erstatte ting på stedet.",
+    "txt_2": "Vi setter pris på at du tok deg tid til å besøke nettstedet vårt. Målet vårt er å gi deg en interaktiv omvisning i vårt nye og brukte inventar, samt gi deg muligheten til å få et tilbud, planlegge en serviceavtale eller søke om finansiering. søk etter en luksusbil er fylt med høye forventninger. Det har absolutt mye å gjøre med kjøretøyene du vurderer, men hos Motors synes vi at du også bør ha ganske høye forventninger til forhandleren.",
+    "MIKEY DIOKLES, President of Motors":"MIKEY DIOKLES, President of Motors",
+    "CORE VALUES":"KJERNE VERDIER",
+    "txt_3":"Vi gjennomgår omfattende fabrikkopplæring slik at vi kan gi deg kunnskapen du trenger for å ta en utdannet beslutning om å velge kjøretøyet som er riktig for din livsstil.",
+    "sub_txt_1":"Stress-free finance department.",
+    "sub_txt_2":"Robust utvalg av populære kjøretøyer.",
+    "sub_txt_3":"350 tilbud på stedet, klarert av et fellesskap.",
+    "sub_txt_4":"Vedlikehold bilen din for å holde deg trygg på veien.",
+    "sub_txt_5":"Vi vet hvordan vi skal håndtere et bredt spekter av biltjenester.",
+    "FINANCE GUARANTEE INSURANCE":"FINANSIERINGSFORSIKRING",
+    "COMMISSION":"Kommisjon",
+    "service_main_txt": "VI LEVERER FINAS, GARANTI, FORSIKRING AV OLJEENDRINGER, FABRIKSJONSREGLER VEDLIKEHOLD OG Nesten ALLE AUTO REPARASJONER. SE IKKE DET PÅ LISTE? BARE SPØR! HAR EN DÅRLIG HELSEDAG I DAG ... MITT MILJØ ER UT AV ARBEID ... VI HAR AVTALE MED HOVEDFORETALINGSBEDRIFTER OG KAN GJØRE BESETSFORSIKRINGEN FOR LAVESTE MULIGE PRIS ... VÅRE GAURANTEPARTNERE ER DE BARE 2 ledende SCANDINAVIEN-SELSKAPER I EUROPA . AUTOCONCEAT OG NORSK BILGARANTI.",
+    "serv7ice_main_txt": "Er du klar til å gi bilen din den tjenesten den ber om? Planlegg bilvedlikehold eller reparasjon her. Våre toppservicepersonell kan få bilen din eller lastebil raskt inn og ut. Vi vet at det ikke er mye mer frustrerende enn å være uten kjøretøy mens det repareres, og det er derfor vi har en stab som utmerker seg med å tilby førsteklasses vedlikehold og reparasjoner - og som er i stand til å gjøre det raskt.",
+    "SORT BY": "Sorter etter",
+    "Date: Newest first": "Dato: Nyest først",
+    "Date: Oldest first": "Dato: Eldst først",
+    "Sales Department": "Salgsavdeling",
+    "TELEFON": "TELEFON",
+    "EPOST":"EPOST",
+    "Kilometer":"Kjørelengde",
+    "No Validation": "Ingen validering",
+    "Private": "Privat",
+    "txt_private": "Kom i gang med kjøp og salg på iAuto.no",
+    "Exciting": "Spennende",
+    "Fun": "Gøy",
+    "We handle the sales crowd": "Vi håndterer salgspublikummet",
+    "Next": "Neste",
+    "Company": "Selskap",
+    "txt_company": "iAuto.no gjør det enkelt å kjøpe og selge for ditt selskap",
+    "We sell fast": "Vi selger raskt",
+    "Documentation at all auctions": "Dokumentasjon på alle auksjoner",
+    "Visibility of multi-channel ads": "Flerkanals annonsesynlighet",
+    "Please tick recaptcha":"Merk av for recaptcha",
+    "Bid":"Bud",
+    "Auto Bid":"Auto Bud"
+}
   
