some bug fix and sentence change

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -82,11 +82,10 @@
   "extended_after_last_bid": "Extended after last bid",
   "Closed": "Closed",
   "service_main_txt": "WE PROVIDE FINAS, GUARANTEE, INSURENACE OIL CHANGES, FACTORY SCHEDULED MAINTENANCE  AND ALMOST ALL AUTO REPAIRS. DON'T SEE IT ON THE LIST? JUST ASK! HAVING A BAD HEALTH DAY TODAY... MY MIND IS OUT OF WORK... WE HAVE AGREMENT WITH TOP INSUENSE COMPANIES AND CAN PROVIDE THE BESET INSURENSE FOR LOWEST POSSIBLE PRICE... OUR GAURANTEE PARTNERS ARE THE ONLY 2 LEADING SCANDINAVIEN COMPANIES OF EUROPE. AUTOCONCEAT AND NORSK BILGARANTI.",
-  "serv7ice_main_txt":"Are you ready to give your car the service it is asking for?  Schedule car maintenance or repair right here.  Our top-notch service staff can get your car or truck in and out quickly.  We know there isn’t much more frustrating than being without your vehicle while it gets repaired.  That’s why we have a staff that excels in providing top-notch maintenance and repair – and is able to do it quickly.",
+  "serv7ice_main_txt":"  We carry out service work and repairs through our partners. Book an hour, deliver the car and get it fixed within 5-7 business days.  iAuto has something for everyone. With us you will find a lot of practical cars at favorable prices. Book an hour by SMS and take a trip to see the selection and test drive so that the car is ready on arrival.  Note!  During the winter months, reservations are made that appointments must be made 24 hours in advance. In case of cancellations 5 hours in advance of the agreement, a fee of 200, - will be forwarded and in case of non-attendance the fee will be forwarded of 300, -.",
   "txt_information": "Auction from iAuto AS has ended. We thank you for the bids - everyone receives an answer to the bids that have been submitted via email. The next auction is scheduled and emails with information will be sent when the cars are ready.",
-  "txt_1":"Before we get ahead of ourselves, we want to welcome you to Loeber Motors. While nothing can replace thing on-the-lot experience.",
-  "txt_2":"We appreciate you taking the time today to visit our web site. Our goal is to give you an interactive tour of our new and used inventory, as well as allow you to conveniently get a quote, schedule a service appointment, or apply for financing. The search for a luxury car is filled with high expectations. Undoubtedly, that has a lot to do with the vehicles you are considering, but at Motors, we think you should also have pretty high expectations for your dealership.",
-  "txt_3":"We go through extensive factory training so that we may provide you with the knowledge you need to make an educated decision in choosing the vehicle that is right for your lifestyle.",
+  "txt_1":"Are you on the hunt for a new car? Do not despair. iAuto holds a wide collection of cars to reasonable prices. On our websites you will find vehicles that are in store. Vehicles are continuously published and considered sold as soon as a customer pays the reregistration fees. We recommend that you call 40097041 to ensure the cars availability",
+  "txt_3":"iAuto was founded by Khawar S. Khan in June 2018 and was already effective in July 2018. iAutos establishment is based on the thought to offer secondhand vehicles with reasonable prices. We offer manual- automatic- and electric cars, that are bought from well-known car dealerships and few as substitution cars restored and improved at approved workshops.  iAuto offers funding through collaborations, so that our customers are bestowed with reasonable prices and a suited repayment period. iAuto offers their customers, reasonably prices and stress free insurance- and guarantee deals, through their collaborations. To view the vehicle selection, you may book an appointment on SMS to 40097041 or on e-mail to web@iauto.no .",
   "sub_txt_1":"Stress-free finance department.",
   "sub_txt_2":"Robust selection of popular vehicles.",
   "sub_txt_3":"350 offers on site, trusted by a community.",
@@ -94,5 +93,17 @@
   "sub_txt_5":"We know how to handle a wide range of car services.",
   "txt_footer":"Trademarks and brands are the property of their respective owners.",
   "txt_private":"Get started with buying and selling at iAuto.no",
-  "txt_company":"iAuto.no makes buying and selling easy for your company"
+  "txt_company":"iAuto.no makes buying and selling easy for your company",
+  "txt_4":"MIKEY DIOKLES, President of Motors",
+  "contact_opening_time":"Opening hours: 10am - 6pm (10am - 4pm Saturday)",
+  "contact_mobile":"Mobile number: 40097041",
+  "contact_email":"e-mail: web@iauto.no",
+  "contact_address":"Address: Odalsgata 25, 2000, Lillestrøm",
+  "register_txt":"iAuto has AUTOREG, which means that we have the potential to register your car. To be an authorized AUTOREG dealership involves the authority to register or reregister vehicles 24 hours a day as we possess a storage for license plates. Fees for registering or reregistering cars can be paid at our store. ",
+  "register_txt_note":"Remember to bring bank ID to perform electronic approval of ownership forms if you want to bring the car with you right away. ",
+  "service_title":"Are you ready to give your car the service it deserves?",
+  "service_txt_1":"Financing: We can facilitate full financing through partners such as DNB, Santander Consumer Bank, SpareBank1 Øst and AS Finansiering.",
+  "service_txt_2":"Insurance: We offer the best car insurance with the first month free through IF insurance.",
+  "service_txt_3":"Starting bonus: from 40%, bonus on extended engine coverage, gearbox, powertrain and everything that prevents the car's immediate progress, better total damage coverage, unlimited rental period on rental car, etc.",
+  "service_txt_4":"Free Start: Our best car insurance including the first month through if.no! (Not all cars apply. Call for more information.)"
 }
