--- a/resources/js/lang/nb.json
+++ b/resources/js/lang/nb.json
@@ -79,12 +79,11 @@
     "Enter your last name": "Angi etternavn",
     "Phone Number" : "Telefonnummer",
     "Subscribe and Get latest updates and offers by Email":"Abonner og få siste oppdateringer og tilbud via e-post",
-    "txt_1":"Før vi går foran oss, ønsker vi deg velkommen til Loeber Motors. Selv om ingenting kan erstatte ting på stedet.",
-    "txt_2": "Vi setter pris på at du tok deg tid til å besøke nettstedet vårt. Målet vårt er å gi deg en interaktiv omvisning i vårt nye og brukte inventar, samt gi deg muligheten til å få et tilbud, planlegge en serviceavtale eller søke om finansiering. søk etter en luksusbil er fylt med høye forventninger. Det har absolutt mye å gjøre med kjøretøyene du vurderer, men hos Motors synes vi at du også bør ha ganske høye forventninger til forhandleren.",
-    "MIKEY DIOKLES, President of Motors":"MIKEY DIOKLES, President of Motors",
+    "txt_1":"Er du på jakt etter bil? Fortvil ikke! Vi på iAuto har et bredt utvalg av biler til lave priser. På våre nettsider finner du alle biler som iAuto har i butikk. Biler publiseres gjennomgående og vurderes solgt når kunden har betalt omregistreringsavgift. Vi gjør vår ytterste for at bilannonser som publiseres inneholder korrekt informasjon, likevel gjør vi oppmerksom på at det kan forekomme feil eller mangler i annonsene. Ekstrautstyr som DAB-radio er ikke inkludert i prisen, unntaket er biler hvor dette er fabrikkmontert. Ring 40097041 for å forsikre om de fortsatt har bilen i butikk, da det hender at den blir solgt før nettsiden oppdateres.",
+    "txt_4":"MIKEY DIOKLES, President i Motors",
     "CORE VALUES":"KJERNE VERDIER",
-    "txt_3":"Vi gjennomgår omfattende fabrikkopplæring slik at vi kan gi deg kunnskapen du trenger for å ta en utdannet beslutning om å velge kjøretøyet som er riktig for din livsstil.",
-    "sub_txt_1":"Stress-free finance department.",
+    "txt_3":"iAuto ble grunnlagt i juni 2018 og var allerede i ikrafttredelse juli 2018. Tanken bak iAutos opprinnelse var og er å tilby bruktbiler av god kvalitet til rimelige priser. Vi selger manuell-, automat- og el-biler, som er kjøpt opp av merkeforhandlere for å sikre kvalitet og innbyttebiler som utbedres for å opprettholde iAutos standard. Vi tilbyr finansiering gjennom våre samarbeidspartnere for at du som kunde får en rimelig pris og gunstig nedbetalingstid. Som kunde hos iAuto kan du også benytte deg av stressfrie forsikrings- og garantiavtaler til overraskende priser, gjennom våre samarbeidspartnere. For å se bilutvalget kan du avtale møte på SMS til 90047041 eller sende e-post til web@iauto.no.",
+    "sub_txt_1":"Stressfri økonomiavdeling.",
     "sub_txt_2":"Robust utvalg av populære kjøretøyer.",
     "sub_txt_3":"350 tilbud på stedet, klarert av et fellesskap.",
     "sub_txt_4":"Vedlikehold bilen din for å holde deg trygg på veien.",
@@ -92,7 +91,7 @@
     "FINANCE GUARANTEE INSURANCE":"FINANSIERINGSFORSIKRING",
     "COMMISSION":"Kommisjon",
     "service_main_txt": "VI LEVERER FINAS, GARANTI, FORSIKRING AV OLJEENDRINGER, FABRIKSJONSREGLER VEDLIKEHOLD OG Nesten ALLE AUTO REPARASJONER. SE IKKE DET PÅ LISTE? BARE SPØR! HAR EN DÅRLIG HELSEDAG I DAG ... MITT MILJØ ER UT AV ARBEID ... VI HAR AVTALE MED HOVEDFORETALINGSBEDRIFTER OG KAN GJØRE BESETSFORSIKRINGEN FOR LAVESTE MULIGE PRIS ... VÅRE GAURANTEPARTNERE ER DE BARE 2 ledende SCANDINAVIEN-SELSKAPER I EUROPA . AUTOCONCEAT OG NORSK BILGARANTI.",
-    "serv7ice_main_txt": "Er du klar til å gi bilen din den tjenesten den ber om? Planlegg bilvedlikehold eller reparasjon her. Våre toppservicepersonell kan få bilen din eller lastebil raskt inn og ut. Vi vet at det ikke er mye mer frustrerende enn å være uten kjøretøy mens det repareres, og det er derfor vi har en stab som utmerker seg med å tilby førsteklasses vedlikehold og reparasjoner - og som er i stand til å gjøre det raskt.",
+    "serv7ice_main_txt": " Vi utfører servicearbeid og reparasjoner gjennom våre samarbeidspartnere. Bestill time, lever bilen og få den fikset i løpet av 5-7 virkedager. iAuto har noe for enhver. Hos oss finner du en mengde praktiske biler til gunstige priser. Bestill time på SMS og ta en tur innom for å se utvalget og prøvekjøre slik at bilen står klar ved ankomst.     NB!   I vintermåneden gjøres det forbehold om at avtaler må gjøres 24 timer i forveien. Ved avbestillinger 5 timer i forkant av avtalen, ettersendes et gebyr på 200,- og ved manglende oppmøte ettersendes gebyr på 300,-. ",
     "SORT BY": "Sorter etter",
     "Date: Newest first": "Dato: Nyest først",
     "Date: Oldest first": "Dato: Eldst først",
@@ -114,6 +113,19 @@
     "Visibility of multi-channel ads": "Flerkanals annonsesynlighet",
     "Please tick recaptcha":"Merk av for recaptcha",
     "Bid":"Bud",
-    "Auto Bid":"Auto Bud"
+    "History":"Historie",
+    "Auto Bid":"Auto Bud",
+    "We offer:":"Vi tilbyr:",
+    "contact_opening_time":"Åpningstider: 10:00 - 18:00 (10:00 - 16:00 Lørdag)",
+    "contact_mobile":"Mobilnummer: 40097041",
+    "contact_email":"e-post: web@iauto.no",
+    "contact_address":"Adresse: Odalsgata 25, 2000, Lillestrøm",
+    "register_txt":"iAuto har AUTOREG, hvilket betyr at vi selv foretar registrering av din bil. Å være autorisert AUTOREG forhandler innebærer at vi kan registrere og/eller omregistrere kjøretøy 24 timer i døgnet og besitter et eget lager av kjennemerker. Omregistreringsavgift av kjøretøy betales til oss. ",
+    "register_txt_note":"NB! Husk å medbringe bankbrikke for å utføre elektronisk godkjenning av eierskifteskjema dersom du ønsker å ta med bilen.  ",
+    "service_title":"Er du klar for å gi bilen din den servicen den fortjener?",
+    "service_txt_1":"Finansiering: Vi kan tilrettelegge for full finansiering gjennom samarbeidspartnere som DNB, Santander Consumer Bank, SpareBank1 Øst og AS Finansiering.",
+    "service_txt_2":"Forsikring: Vi tilbyr de beste bilforsikringene med første måned gratis gjennom IF forsikring. ",
+    "service_txt_3":"Startbonus: fra 40%, bonus på utvidet skadedekning på motor, girkasse, drivverk og alt som hindrer bilens umiddelbare fremdrift, bedre totalskadedekning, ubegrenset leieperiode på leiebil, m.m.",
+    "service_txt_4":"Fri Start: Vår beste bilforsikring inkludert den første måneden gjennom if.no! (Gjelder ikke alle biler. Ring for mer informasjon.)"
 }
   
